# Octav-Bootcamp

AutomatedBackUp/: Cargo.toml
AutomatedBackUp/BackUpInfo/: config_user.json  last_backup.txt
AutomatedBackUp/src/: consts.rs  demon.rs  encryption.rs  error.rs  file_io.rs  handle.rs
Clarity Projects/crowfund/: package-lock.json
Clarity-Projects/mining-pool/: Clarinet.toml  package.json
Clarity-Projects/tiny-market/: Clarinet.toml
CliWallet/: Cargo.toml  keychain.json  logs.db
CliWallet/src/: calls.rs  config.rs  console.rs  lib.rs  main.rs
QuoteOfTheDay/src/: main.rs  quotes.rs
Rust Projects/CliWallet/: keychain.json
Rust Projects/File_Compression_and_Decompression/: Cargo.toml
Rust Projects/QuoteOfTheDay/: quotes.json
Rust Projects/csv_serde/: Cargo.toml
Rust Projects/p2p-handshake-master/: logs.db
Rust Projects/weather/: .env
Rust-Projects/: README.md
Rust-Projects/AutomatedBackUp/: .README.md  README.md
Rust-Projects/CliCalculator/: .gitignore
Rust-Projects/CliWallet/: .gitignore  logs.db  stx_address.json
Rust-Projects/FileSearch/: .gitignore
Rust-Projects/GuessingGame/: .gitignore
Rust-Projects/QuoteOfTheDay/: Cargo.toml
Rust-Projects/QuoteOfTheDay/src/: file_io.rs
Rust-Projects/QuoteOfTheDayApp/: Cargo.toml  README.md  quotes.json
Rust-Projects/QuoteOfTheDayApp/public/: index.html
Rust-Projects/QuoteOfTheDayApp/src/: main.rs  quotes.rs  web.rs
Rust-Projects/QuoteOfTheDayCLI/: Cargo.toml
Rust-Projects/StacksWalletLib/: .gitignore  Cargo.toml
Rust-Projects/TCPhello/: .gitignore  Cargo.toml
Rust-Projects/csv_serde/: .gitignore
Rust-Projects/hash-cracker/: .gitignore  Cargo.toml  README.md
Rust-Projects/p2p-handshake-master/: .gitignore  Cargo.toml
Rust-Projects/p2p-handshake-master/src/: handshake.rs
Rust-Projects/weather app/: .gitignore  README.md
Rust-Projects/weather-app-frontend/: package-lock.json  package.json
StacksWalletLib/src/: lib.rs
TCPhello/src/: main.rs
Typescript Projects/Bookstore/: bookstore.json  package-lock.json  package.json
Typescript Projects/IssueTransporter/: package.json
Typescript Projects/WeatherApp/: package-lock.json  package.json
Typescript Projects/p2p-handshake/: package-lock.json  package.json
Typescript-Projects/StxWallet/: package-lock.json  package.json  tsconfig.json
Typescript-Projects/p2p-handshake/: package.json
p2p-handshake-master/src/: config.rs  dns.rs  lib.rs  main.rs
weather/: Cargo.toml
weather/src/: args.rs  console.rs  fetch.rs  file_io.rs  main.rs
weather/weather_data/: alba-iulia_forecast.hex  arad_forecast.hex  bop_forecast.hex  borsa_now.hex  bucuresti_forecast.hex  bucuresti_now.hex  buzias_forecast.hex  doha_now.hex  dubai_now.hex  dumbravita_now.hex  timisoara_forecast.hex  timisoara_now.hex
(+78 files in other folders)
