[package]
name = "AutomatedBackUp"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
anyhow = "1.0.95"
daemonize = "0.5.0"
tokio = { version = "1.43.0", features = ["full"] }
walkdir = "2.4.0"
fs_extra = "1.3.0"
nix = "0.29.0"
rand = "0.8.5"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
chrono = "0.4.39"
zip = "0.6.6"
orion = "0.17.7"
rand_core = { version = "0.6.4", features = ["getrandom"] }
colored = "3.0.0"