[package]
name = "cli_wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
curl = "0.4.47"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12.9", features = ["json"] }
bitcoin = "0.32.5"
bip39 = "2.0.0"
hex = "0.4"
colored = "2.0"
nu-ansi-term = "0.50.0"
thiserror = "2.0.8"
rusqlite = "0.32.1"