[package]
name = "QuoteOfTheDay"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
reqwest = { version = "0.12.12", features = ["json"] } 
futures = "0.3"
tokio = { version = "1.12.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
colored = "3.0.0"
anyhow = "1.0.95"
rand = "0.8.5"