[package]
name = "QuoteOfTheDayApp"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
reqwest = { version = "0.12.15", features = ["json"] } 
futures = "0.3.31"
tokio = { version = "1.45.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
chrono = "0.4.41"
colored = "3.0.0"
anyhow = "1.0.98"
rand = "0.9.1"
rocket = { version = "0.5.1", features = ["json"] }
rocket_cors = "0.6.0"