[package]
name = "bitcoin-handshake-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.48"
log = "0.4.20"
tokio = { version = "1.32.0", features = ["full"] }
bitcoin = "0.30.1"
chrono = "0.4.29"
rand = "0.8.5"
rusqlite = "0.32.1"
colored = "2.0"